variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value nbPas
nbPas=0
^Variables:2: error: not found: value dejaFait
dejaFait=0
^Variables:6: error: not found: value nbPas
  nbPas=nbPas+1
  ^Variables:9: error: not found: value nbPas
while(nbPas!=dejaFait){
      ^Variables:9: error: not found: value dejaFait
while(nbPas!=dejaFait){
             ^Variables:11: error: not found: value dejaFait
  dejaFait = dejaFait+1
  ^