variables.Variables.scala.code
nbPas=0
dejaFait=0
while(!estSurBiscuit()){
  
  avance()
  nbPas=nbPas+1
}
prendBiscuit()
while(nbPas!=dejaFait){
  recule()
  dejaFait = dejaFait+1
}